basic changes to index, base, secrets

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
    
 
 
-    <h1 class="display-4 text-center"> Adolescent sleep tracker </h1>
+    <h1 class="display-4 text-center"> Music Affect on Anxiety </h1>
     <p></p>
     <p></p>
 
