--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -7,13 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 display-8 text-black fw-bold" style="margin: 0% 37%;"> 
         <li class="nav-item">
-          <a class="nav-link" href="/sleeps">Sleep</a>
+          <a class="nav-link" href="/music/new">New Music</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/sleep/new">New Sleep</a>
+          <a class="nav-link" href="/music/list">Music List</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/overview">Overview</a>
+          <a class="nav-link" href="/music/favorites">Favorites!</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/aboutme">About Me</a>
         </li>
         <li class='nav-item'>
           <a class="nav-link" href="/blogs">User Feedback</a>
