--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
     
     <img src="/static/CloudsPNG.png" class="rounded float-start" width = "200" hieght= "200" alt="...">
     
-    <h1 class="display-4 text-center ">Welcome!</h1>
+    <h1 class="display-4 text-center ">Howdy!</h1>
     
     
 
@@ -24,15 +24,15 @@
    
 
 
-    <h1 class="display-4 text-center"> Music Affect on Anxiety </h1>
+    <h1 class="display-4 text-center"> Music's Affect on Anxiety </h1>
     <p></p>
     <p></p>
 
     <div class="container text-left display-7 text-center border border-5 whtie" >
         <div class="row">
         <div class="col">
-          <b> Our Misson statement:</b>
-          <p>A sleep tracker for students made by students, specialized for the patterns of students going from childhood to adolescence and bringing awareness to the overall severe effect of sleep deprivation on young brains. Also, draw attention to this problem so teachers and parents can look for signs in their students <p> </p></p>
+          <b>Mission:</b>
+          <p>Provide an app that reccomends Music based on the users interests and levels of stress, as well as asking user how their stress levels have changed after listening to music and recording that information.<p> </p></p>
         </div>
     </div>
     </div>
@@ -51,13 +51,13 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
         <div class="carousel-item active">
-        <img src="/static/homeimg.jpg" class="d-block w-100" alt="..." width="400" height="500">
+        <img src="/static/zmusicnotes.jpg" class="d-block w-100" alt="..." width="400" height="500">
       </div>
       <div class="carousel-item">
-        <img src="/static/homeimg2.jpg" class="d-block w-100" alt="..."  width="400" height="500" >
+        <img src="/static/zmusicnotes.jpg" class="d-block w-100" alt="..."  width="400" height="500" >
       </div>
       <div class="carousel-item">
-        <img src="/static/homeimg3.jpg" class="d-block w-100" alt="..." width="400" height="500">
+        <img src="/static/zmusicnotes.jpg" class="d-block w-100" alt="..." width="400" height="500">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
