--- a/app/templates/profilemy.html
+++ b/app/templates/profilemy.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <h1 class="display-1">
-    My Profile
+    Jonas' Profile
     <a href="/myprofile/edit">
         <img width="40" src="/static/edit.png">
     </a>
@@ -31,6 +31,8 @@
         Send to: {{current_user.adult_fname}} {{current_user.adult_lname}} <br>
         Email: {{current_user.adult_email}}
     </div>
+    Role: {{current_user.role}} <br>
+    Phone Number: {{current_user.number}} <br>
 </div>
 <br>
 
