--- a/app/templates/blogs.html
+++ b/app/templates/blogs.html
@@ -6,7 +6,7 @@
 <img src="/static/CloudsPNG.png" class="rounded float-start" width = "200" hieght= "200" alt="...">    </div>
 <div class="row">
     <div class="col-4">
-        <h1 class="display-1">Any Feedback for us?</h1>
+        <h1 class="display-1">Is this app valid?</h1>
     </div>
     <div class="col">
         <a href="/blog/new" class="btn btn-primary btn-sm mt-5" role="button">Comment Button</a>
