--- a/app/templates/includes/_navbar.html
+++ b/app/templates/includes/_navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid mb-3">
-    <a class="navbar-brand .navbar-text display-5 text-black font-weight-bold fw-bold" href="/">Adolscent Sleep Tracker</a>
+    <a class="navbar-brand .navbar-text display-5 text-black font-weight-bold fw-bold" href="/">Soothing Music App</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
